2008-08-26  Jonathan Pobst  <monkey@jpobst.com>

	* ErrorProvider.cs: Fix a regression NRE when setting properties
	for a control before it has a parent.
	[Fixes bug #420305]

2008-08-19  Jonathan Pobst  <monkey@jpobst.com>

	* LinkLabel.cs: Always clear any previous links when LinkArea
	is set.  [Fixes bug #410709]

2008-08-22  Atsushi Enomoto  <atsushi@ximian.com>

	* X11Keyboard.cs : comment out some Console.WriteLine().

2008-08-22  Atsushi Enomoto  <atsushi@ximian.com>

	* X11Keyboard.cs : fixed wrong call to XOpenIM() which happened
	  even if premises are not filled. Also XLookupString() was not
	  receiving correct input, which blocked precise input handling
	  on non-XIM mode.

2008-08-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XplatUIWin32.cs : SetTimer() used to set wrong window handle and
	  it caused timer registration twice. Fixed bug #418107.

2008-08-16  Ivan N. Zlatev  <contact@i-nz.net>

	* GridEntry.cs: Leave the ICustomTypeDescriptor handling up to the 
	ComponentModel layer, which will properly prioritize the attributes.
	Avoids wrong prioritization of duplicate attributes when retrieving 
	the converter and editor.
	[Fixes bug #417729]

2008-08-15  Ivan N. Zlatev  <contact@i-nz.net>

	* GridEntry.cs: Perform stricter check for the ParentEntry's 
	PropertyDescriptor/PropertyOwner for the ICustomTypeDescriptor 
	implementation.
	[Fixes bug #417567]

2008-08-14  Geoff Norton  <gnorton@novell.com>

	* XplatUICarbon.cs: Track the ActiveWindow internally for GetActive().
	Don't prematurely display POPUP windows.  Fully fixed #393317.

2008-08-12  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* XplatUIX11.cs: Handle the obscured regions while scrolling using
	GraphicsExpose event, processing it just after we copy the scrolled
	area. This ensures that the next calls to ScrollWindow will copy
	regions already updated, and the scrolling will be smooth. Also remove
	the code that was trying to detect the obscured regions, since we are